src/content/docs/sdk/android/v5/features/callbacks-ko.mdx
---
title: "콜백 정보 전송"
description: "이 메서드를 사용하여 콜백 정보를 Adjust로 전송합니다."
slug: "ko/sdk/android/features/callbacks"
---

SDK가 Adjust에 정보를 보낼 때 함수를 트리거하는 콜백을 설정합니다. 콜백은 **세션** 및 **이벤트** 에 대해 설정할 수 있습니다.

<Callout type="important">

SDK 초기화 **이전** 에 콜백을 등록해야 합니다.

</Callout>

## [세션 콜백](session-callbacks)

SDK가 세션 정보를 전송할 때 함수를 트리거하는 세션 콜백을 설정합니다. **success** 콜백과 **failure** 콜백을 생성할 수 있습니다. **Success** 콜백은 SDK가 Adjust 서버로 정보를 전송할 때 트리거합니다. **Failure** 콜백은 SDK가 정보를 전송하는 동안 문제가 발생할 경우 트리거합니다.

세션 콜백은 응답 데이터 객체에 액세스가 가능하며, 해당 속성을 콜백 함수 내에서 사용할 수 있습니다.

<Table>

| 속성           | 데이터 유형                   | 설명                                     |
| -------------- | ----------------------------- | ---------------------------------------- |
| `Message`      | `String`                      | 서버로부터의 메시지나 SDK가 로깅한 오류. |
| `Timestamp`    | `String`                      | Adjust 서버의 타임스탬프.                |
| `Adid`         | `String`                      | Adjust가 제공한 고유한 디바이스 ID.      |
| `JsonResponse` | `Dictionary <String, Object>` | 서버로부터의 응답을 포함한 JSON 객체.    |
| `WillRetry`    | `Boolean`                     | 실패한 패키지 재전송 시도 여부를 표시.   |

</Table>

### [Success 콜백](success-callbacks)

<CodeBlock title="메서드 서명">

```java
public void setOnSessionTrackingSucceededListener(OnSessionTrackingSucceededListener onSessionTrackingSucceededListener)
```

</CodeBlock>

SDK가 세션을 기록할 때 함수를 트리거하도록 success 콜백을 설정합니다.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val config = AdjustConfig(this, appToken, environment)
//...
config.setOnSessionTrackingSucceededListener(new OnSessionTrackingSucceededListener() {
   override fun onFinishedSessionTrackingSucceeded(sessionSuccessResponseData: AdjustSessionSuccess) {
      //...
   }
})
//...
Adjust.initSdk(config)
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustConfig config = new AdjustConfig(this, appToken, environment);
//...
config.setOnSessionTrackingSucceededListener(new OnSessionTrackingSucceededListener() {
   @Override
   public void onFinishedSessionTrackingSucceeded(AdjustSessionSuccess sessionSuccessResponseData) {
      //...
   }
});
//...
Adjust.initSdk(config)
```

</Tab>
</Tabs>

#### [예시](example)

예시에서는 콜백 함수 `sessionSuccess`를 생성하고 이 함수를 **success** 콜백으로 등록하는 방법을 보여줍니다. 이 함수는 SDK가 세션을 기록한 시점의 타임스탬프를 기록합니다.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val config = AdjustConfig(this, appToken, environment)

config.setOnSessionTrackingSucceededListener(new OnSessionTrackingSucceededListener() {
   override fun sessionSuccess(sessionSuccessResponseData: AdjustSessionSuccess) {
      Log.v("Session recorded at " + sessionSuccessResponseData.Timestamp)
   }
})

Adjust.initSdk(config)
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustConfig config = new AdjustConfig(this, appToken, environment);

config.setOnSessionTrackingSucceededListener(new OnSessionTrackingSucceededListener() {
   @Override
   public void sessionSuccess(AdjustSessionSuccess sessionSuccessResponseData) {
      Log.v("Session recorded at " + sessionSuccessResponseData.Timestamp)
   }
});

Adjust.initSdk(config)
```

</Tab>
</Tabs>

### [Failure 콜백](failure-callbacks)

<CodeBlock title="메서드 서명">

```java
public void setOnSessionTrackingFailedListener(OnSessionTrackingFailedListener onSessionTrackingFailedListener)
```

</CodeBlock>

SDK가 세션 기록에 실패했을 때 함수를 트리거하는 failure 콜백을 설정합니다.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val config = AdjustConfig(this, appToken, environment)
//...
config.setOnSessionTrackingFailedListener(new OnSessionTrackingFailedListener() {
   override fun onFinishedSessionTrackingFailed(sessionFailureResponseData: AdjustSessionFailure) {
      //...
   }
})
//...
Adjust.initSdk(config)
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustConfig config = new AdjustConfig(this, appToken, environment);
//...
config.setOnSessionTrackingFailedListener(new OnSessionTrackingFailedListener() {
   @Override
   public void onFinishedSessionTrackingFailed(AdjustSessionFailure sessionFailureResponseData) {
      //...
   }
});
//...
Adjust.initSdk(config)
```

</Tab>
</Tabs>

#### [예시](example-1)

예시에서는 콜백 함수 `sessionFailure`를 생성하고 이 함수를 **failure** 콜백으로 등록하는 방법을 보여줍니다. 이 함수는 세션 failure 메시지를 기록합니다.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val config = AdjustConfig(this, appToken, environment)

config.setOnSessionTrackingFailedListener(new OnSessionTrackingFailedListener() {
   override fun sessionFailure(sessionFailureResponseData: AdjustSessionFailure) {
      Log.v("Session recording failed. Response: " + sessionFailureResponseData.Message)
   }
})

Adjust.initSdk(config)
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustConfig config = new AdjustConfig(this, appToken, environment);

config.setOnSessionTrackingFailedListener(new OnSessionTrackingFailedListener() {
   @Override
   public void sessionFailure(AdjustSessionFailure sessionFailureResponseData) {
      Log.v("Session recording failed. Response: " + sessionFailureResponseData.Message)
   }
});

Adjust.initSdk(config)
```

</Tab>
</Tabs>

## [이벤트 콜백](event-callbacks)

SDK가 이벤트 정보를 전송할 때 함수를 트리거하는 이벤트 콜백을 설정합니다. **success** 콜백과 **failure** 콜백을 생성할 수 있습니다. **Success** 콜백은 SDK가 Adjust 서버로 정보를 전송할 때 트리거합니다. **Failure** 콜백은 SDK가 정보를 전송하는 동안 문제가 발생할 경우 트리거합니다.

이벤트 콜백은 응답 데이터 객체에 액세스가 가능하며, 해당 속성을 콜백 함수 내에서 사용할 수 있습니다.

<Table>

| 속성           | 데이터 유형                   | 설명                                     |
| -------------- | ----------------------------- | ---------------------------------------- |
| `Message`      | `String`                      | 서버로부터의 메시지나 SDK가 로깅한 오류. |
| `Timestamp`    | `String`                      | Adjust 서버의 타임스탬프.                |
| `Adid`         | `String`                      | Adjust가 제공한 고유한 디바이스 ID.      |
| `EventToken`   | `String`                      | 이벤트 토큰                              |
| `CallbackId`   | `String`                      | 이벤트 객체에 설정된 맞춤 정의 콜백 ID   |
| `JsonResponse` | `Dictionary <String, Object>` | 서버로부터의 응답을 포함한 JSON 객체.    |
| `WillRetry`    | `Boolean`                     | 실패한 패키지 재전송 시도 여부를 표시.   |

</Table>

### [Success 콜백](success-callbacks-1)

<CodeBlock title="메서드 서명">

```java
public void setOnEventTrackingSucceededListener(OnEventTrackingSucceededListener onEventTrackingSucceededListener)
```

</CodeBlock>

SDK가 이벤트를 기록할 때 함수를 트리거하는 success 콜백을 설정합니다.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val config = AdjustConfig(this, appToken, environment)
//...
config.setOnEventTrackingSucceededListener(new OnEventTrackingSucceededListener() {
   override fun onFinishedEventTrackingSucceeded(eventSuccessResponseData: AdjustEventSuccess) {
      //...
   }
})
//...
Adjust.initSdk(config)
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustConfig config = new AdjustConfig(this, appToken, environment);
//...
config.setOnEventTrackingSucceededListener(new OnEventTrackingSucceededListener() {
   @Override
   public void onFinishedEventTrackingSucceeded(AdjustEventSuccess eventSuccessResponseData) {
      //...
   }
});
//...
Adjust.initSdk(config)
```

</Tab>
</Tabs>

#### [예시](example-2)

예시에서는 콜백 함수 `eventSuccess`를 생성하고 이 함수를 **success** 콜백으로 등록하는 방법을 보여줍니다. 이 함수는 SDK가 이벤트를 기록한 시점의 타임스탬프를 기록합니다.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val config = AdjustConfig(this, appToken, environment)

config.setOnEventTrackingSucceededListener(new OnEventTrackingSucceededListener() {
   override fun eventSuccess(eventSuccessResponseData: AdjustEventSuccess) {
      Log.v("Event recorded at " + eventSuccessResponseData.Timestamp)
   }
})

Adjust.initSdk(config)
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustConfig config = new AdjustConfig(this, appToken, environment);

config.setOnEventTrackingSucceededListener(new OnEventTrackingSucceededListener() {
   @Override
   public void eventSuccess(AdjustEventSuccess eventSuccessResponseData) {
      Log.v("Event recorded at " + eventSuccessResponseData.Timestamp)
   }
});

Adjust.initSdk(config)
```

</Tab>
<Tab title="Javascript" sync="js">

```js
function eventSuccess(eventSuccessResponseData) {
   console.log("Event recorded at " + eventSuccessResponseData.Timestamp);
}

let adjustConfig = new AdjustConfig(appToken, environment);
adjustConfig.setEventSuccessCallback(eventSuccess);

Adjust.initSdk(adjustConfig);
```

</Tab>
</Tabs>

### [Failure 콜백](failure-callbacks-1)

<CodeBlock title="메서드 서명">

```java
public void setOnEventTrackingFailedListener(OnEventTrackingFailedListener onEventTrackingFailedListener)
```

</CodeBlock>

SDK가 이벤트 기록에 실패했을 때 함수를 트리거하는 failure 콜백을 설정합니다.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val config = AdjustConfig(this, appToken, environment)
//...
config.setOnEventTrackingFailedListener (OnEventTrackingFailedListener() {
   override fun onFinishedEventTrackingFailed(eventFailureResponseData: AdjustEventFailure) {
      //...
   }
})
//...
Adjust.initSdk(config)
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustConfig config = new AdjustConfig(this, appToken, environment);
//...
config.setOnEventTrackingFailedListener(new OnEventTrackingFailedListener() {
   @Override
   public void onFinishedEventTrackingFailed(AdjustEventFailure eventFailureResponseData) {
      //...
   }
});
//...
Adjust.initSdk(config)
```

</Tab>
</Tabs>

#### [예시](example-3)

예시에서는 콜백 함수 `eventFailure`를 생성하고 이 함수를 **failure** 콜백으로 등록하는 방법을 보여줍니다. 이 함수는 이벤트 실패 메시지를 로그합니다.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val config = AdjustConfig(this, appToken, environment)

config.setOnEventTrackingFailedListener(new OnEventTrackingFailedListener() {
   override fun eventFailure(eventFailureResponseData: AdjustEventFailure) {
      Log.v("Event recording failed. Response: " + eventFailureResponseData.Message)
   }
})

Adjust.initSdk(config)
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustConfig config = new AdjustConfig(this, appToken, environment);

config.setOnEventTrackingFailedListener(new OnEventTrackingFailedListener() {
   @Override
   public void eventFailure(AdjustEventFailure eventFailureResponseData) {
      Log.v("Event recording failed. Response: " + eventFailureResponseData.Message)
   }
});

Adjust.initSdk(config)
```

</Tab>
</Tabs>
